--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 /dataset
-tb_logs/BYOL/version_0/events.out.tfevents.1625241261.MSI-GS75-Stealth.11655.0
-tb_logs/BYOL/version_0/hparams.yaml
-tb_logs/BYOL/version_0/checkpoints/epoch=1-step=199.ckpt
+/tb_logs
+BYOL/Models/
+MoCo/Models/
+SimSiam/Models/
+SimCLR/Models/
+
